--- a/docker-compose.prod.7b.yml
+++ b/docker-compose.prod.7b.yml
@@ -1,6 +1,7 @@
 services:
   vibevoice:
     image: ghcr.io/dale0525/vibevoice-docker:7b
+    container_name: vibevoice-7b
     ports:
       - "8000:8000"
     volumes:
