--- a/.github/workflows/vibevoice-docker.yml
+++ b/.github/workflows/vibevoice-docker.yml
@@ -95,8 +95,9 @@ jobs:
             VIBEVOICE_MODEL_ID=${{ matrix.model_id }}
           push: true
           tags: ${{ steps.vars.outputs.tags }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          # 使用 GHCR 作为 build cache 存储，避免 GHA cache 体积/并发导致的缺 blob 问题
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/vibevoice-docker:buildcache-${{ matrix.model_tag }}
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/vibevoice-docker:buildcache-${{ matrix.model_tag }},mode=max
 
   release:
     name: create-github-release
