🧪 test(text-normalize): add unit tests for script splitting logic

--- a/docker-compose.prod.7b.yml
+++ b/docker-compose.prod.7b.yml
@@ -11,6 +11,7 @@ services:
       - VIBEVOICE_WARMUP_ON_PRELOAD=true
       - VIBEVOICE_IDLE_UNLOAD_SECONDS=900
       - VIBEVOICE_MAX_LOADED_MODELS=1
+      - VIBEVOICE_SCRIPT_LINE_MAX_CHARS=150
     deploy:
       resources:
         reservations:
