--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,6 +20,7 @@ services:
       - VIBEVOICE_WARMUP_ON_PRELOAD=true
       - VIBEVOICE_IDLE_UNLOAD_SECONDS=900
       - VIBEVOICE_MAX_LOADED_MODELS=1
+      - VIBEVOICE_SCRIPT_LINE_MAX_CHARS=150
     command:
       ["uvicorn", "main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
     deploy:
